# krippendorff-aleph-alpha

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  LICENSE  Makefile  README.md  bump_version.sh  create_release_tag.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml  publish.yml
datasets/: README.md  interval_numeric_equalGaps_noAbsoluteZero.tsv  nominal_categorical_noOrder_sample.tsv  ordinal_orderedCategories_highAgreement_sample.tsv  ordinal_orderedCategories_unequalGaps_sample.tsv  ratio_numeric_equalGaps_withAbsoluteZero.tsv
examples/: README.md  interval_numeric_equalGaps_noAbsoluteZero.jsonl  nominal_categorical_noOrder_sample.json  ordinal_orderedCategories_highAgreement_sample.csv  ordinal_orderedCategories_unequalGaps_sample.csv  ratio_numeric_equalGaps_withAbsoluteZero.tsv
notebooks/: README.md  annotation_evaluation.ipynb
src/infrastructure/: task.py
src/krippendorff_alpha/: compute_alpha.py  config.py  constants.py  core.py  data_handler.py  dynamic_update.py  metric.py  preprocessing.py  reliability.py  schema.py  utils.py
src/krippendorff_alpha/config/: config_en.yaml
tests/: conftest.py  test_compute_alpha.py  test_config.py  test_core.py  test_data_handler.py  test_dynamic_update.py  test_metric.py  test_preprocessing.py  test_reliability.py
